# Soulmem

./: .gitignore  Cargo.toml  LLMConfig.env  README.md  README_en.md
benches/: ppr.rs
character_example/: example.toml
docs/architecture/: beta_ver.md  记忆算法概述-修订.md
src/: db.rs  lib.rs  llm_driver.rs  memory.rs  qdrant_retriever.rs  schedule_task.rs  soul_embedding.rs  time_wheel.rs  utils.rs
src/db/: hybrid_retriever.rs  qdrant_retriever.rs  surreal_retriever.rs
src/db/hybrid_retriever/: config.rs
src/memory/: default_prompts.rs  embedding.rs  flasher.rs  long_term.rs  memory_cluster.rs  memory_links.rs  memory_note.rs  probability.rs  query.rs  record.rs  refactor.rs  share.rs  temporary.rs  working.rs  working_memory.rs
src/memory/algo/: retrieve.rs
src/memory/algo/retrieve/: association.rs  cached_path.rs  deep_thought.rs  short_only.rs  similarity.rs
src/memory/embedding/: embedding_model.rs  note.rs  query.rs  sem.rs  sem_embedding.rs  situation.rs  vec.rs
src/memory/embedding/embedding_model/: bge.rs  qwen3.rs
src/memory/embedding/query/: note.rs  sem.rs  situation.rs
src/memory/flasher/: basic_component.rs
src/memory/memory_links/: proc_mem.rs  sem_mem.rs  situation_mem.rs
src/memory/memory_note/: proc_mem.rs  sem_mem.rs  situation_mem.rs
src/memory/query/: compute.rs  retrieve.rs
src/memory/refactor/: memory_note.rs
src/memory/working/: diffuser.rs  task.rs
src/memory/working_memory/: record.rs  sliding_window.rs
src/utils/: graph_algo.rs  pipe.rs
src/utils/graph_algo/: ord_float.rs  ppr.rs
(+16 files in other folders)
