[package]
name = "soul_mem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
fastembed = "5.2.0"
ordered-float = "5.0.0"
parking_lot = { version = "0.12.4", features = ["serde"] }
petgraph = "0.8.2"
qdrant-client = "1.14.0"
reqwest = { version = "0.12.20", features = ["json","rustls-tls"] }
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
formatx = "0.2.4"
mockall = "0.13.1"
async-trait = "0.1.88"
surrealdb = { version = "2.3.6", features = ["kv-rocksdb"] }
rayon = "1.10.0"
nalgebra = "0.34.0"
nalgebra-sparse = "0.11.0"
log = "0.4.27"
approx = "0.5.1"
dotenvy = "0.15.7"
tokio-util = "0.7.16"
toml = "0.9.5"
thiserror = "2.0.17"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
